# Dio

./: README.md  index.html  nota.md  style.css
 Jogo da memória com Emojis Utilizando Javascript/: README.md  index.html
AWS/ AWS Rekognition - Detectando Celebridades em Imagens/: README.md
AWS/Transcrevendo uma Imagem em Texto com AWS Textract/: README.md
Azure/.obsidian/: workspace.json
Azure/Análise de Sentimentos com Language Studio no Azure AI/: READMe.md
Azure/Azure Cognitive Search: Utilizando AI Search para indexação e consulta de Dados/: README.md
Azure/Explorando os Recursos de IA Generativa com Copilot e OpenAI/: README.md
Azure/Machine Learning na Prática no Azure ML/: Machine Learning.md
Azure/ Reconhecimento Facial e transformação de imagens em Dados no Azure ML/: README.md
Criando um Ebook com ChatGPT & MidJourney/: .~lock.book.odg#  book.odg
Detona Ralph com JavaScript/: README.md  index.html
Java/bancoDigital-java/: ContaCorrente.java  IConta.java  Makefile  (+1 more)
Python/Criando Uma API Com FastAPI Utilizando TDD/: README.md  pyproject.toml
Python/Criando Uma API Com FastAPI Utilizando TDD/store/: __init__.py
Simulador de Piano com JavaScript/: README.md  index.html
Yu-Gi-Oh/: README.md  index.html
bancoDigital-java/: Banco.java  Cliente.java  Conta.java  ContaPoupanca.java  Main.java
flex-projeto /: index.html  style.css
flexbox/: README.md
jupyterNotebook/: .gitignore  Redução de Dimensionalidade em Imagens para Redes Neurais.ipynb  Transfer_Learning.ipynb  main.py
trilha-css-desafio-01/: README.md  styles.css
(+36 files in other folders)
