[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["YamachitaR <rickyamas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0" 
motor = "^3.3.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
